[tool.poetry]
name = "dash-to-vtt"
version = "0.1.0"
description = "Creates a vtt subtitile file from dash files"
authors = ["Mikeprod"]
license = "MIT"
readme = "README.md"
packages = [{include = "dash_to_vtt"}]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "5.0.4"
flake8-html = "^0.4.3"
flake8-bandit = "^4.1.1"
flake8-bugbear = "23.3.12"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-print = "^5.0.0"
flake8-tidy-imports = "^4.8.0"
flake8-eradicate = "^1.4.0"
pre-commit = "^3.2.2"
naming = "^0.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
